--- a/src/main/resources/templates/stu/push.html
+++ b/src/main/resources/templates/stu/push.html
@@ -7,7 +7,7 @@
 <script>
     if(typeof(EventSource)!=="undefined")
     {
-        var source=new EventSource("push");
+        var source=new EventSource("push");//发起请求地址：localhost:8081/push
         source.onmessage=function(event)
         {
             document.getElementById("result").innerHTML+=event.data + "<br />";
